new DecklistManager service

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,6 +77,9 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            numeric_functions:
+                power: AppBundle\DQL\PowerFunction
 
 # Swiftmailer Configuration
 swiftmailer:
