removed service DeckInterface ; added inheritance and interface to Deck and Decklist ; use entityManager for all deck and decklist displays

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,7 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         cards_data: "@cards_data"
+        deck_validation_helper: "@deck_validation_helper"
     form:
         resources:
             - 'bootstrap_3_layout.html.twig'
