--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -39,7 +39,7 @@ AppBundle\Entity\Deck:
             mappedBy: parent
         changes:
             targetEntity: Deckchange
-            orderBy: {'dateCreation':'DESC'}
+            orderBy: {'dateCreation':'DESC', 'isSaved':'DESC'}
             mappedBy: deck
             cascade: ["persist","remove"]
     fields:
