--- a/src/AppBundle/Resources/config/doctrine/Deckchange.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deckchange.orm.yml
@@ -28,3 +28,6 @@ AppBundle\Entity\Deckchange:
         isSaved:
             type: boolean
             column: is_saved
+        version:
+            type: string
+            length: 8
