displaying decklist version with minor

--- a/src/AppBundle/Resources/config/doctrine/Decklist.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Decklist.orm.yml
@@ -133,5 +133,5 @@ AppBundle\Entity\Decklist:
             type: integer
             column: nb_comments
         version:
-            type: integer
-            nullable: false
+            type: string
+            length: 8
