--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2,9 +2,9 @@ app_admin:
     resource: "@AppBundle/Resources/config/routing/admin.yml"
     prefix: /admin
 
-app_api_oauth2:
-    resource: "@AppBundle/Resources/config/routing/api_oauth2.yml"
-    prefix: /api_oauth2
+app_oauth2:
+    resource: "@AppBundle/Resources/config/routing/oauth2.yml"
+    prefix: /oauth2
 
 app_api:
     resource: "@AppBundle/Resources/config/routing/api.yml"
