user_info returns to /api for firewall issue

--- a/src/AppBundle/Resources/config/routing/api.yml
+++ b/src/AppBundle/Resources/config/routing/api.yml
@@ -48,3 +48,9 @@ api_decklists:
     requirements:
         _format: json
         date: \d\d\d\d-\d\d-\d\d
+
+user_info:
+    pattern: /user/info
+    defaults:
+        _controller: AppBundle:User:info
+        
