new page to edit decklist ; added Smarty Pants converter

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "friendsofsymfony/jsrouting-bundle": "^1.5",
         "twig/extensions": "^1.2",
         "ezyang/htmlpurifier": "^4.6",
-        "michelf/php-markdown": "^1.5",
+        "michelf/php-markdown": "^1.5@dev",
+        "michelf/php-smartypants": "^1.6@dev",
         "leafo/scssphp": "^0.2.0",
         "patchwork/jsqueeze": "~1.0",
         "friendsofsymfony/oauth-server-bundle": "^1.4",
