--- a/src/AppBundle/Resources/config/routing/routing_admin.yml
+++ b/src/AppBundle/Resources/config/routing/routing_admin.yml
@@ -1,3 +1,6 @@
+app_admin_tournament:
+    resource: "@AppBundle/Resources/config/routing/admin/routing_admin_tournament.yml"
+    prefix:   /tournament
 
 AppBundle_admin_cycle:
     resource: "@AppBundle/Resources/config/routing/admin/routing_admin_cycle.yml"
