--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,3 +16,12 @@ parameters:
     # units: seconds
     cache_expiration:  600
     
+    # Email sender
+    email_sender_address: alsciende@icloud.com
+    email_sender_name: Alsciende
+    
+    # Branding
+    website_name: ThronesDB
+    game_name: A Game of Thrones: The Card Game Second Edition
+    publisher_name: Fantasy Flight Games
+    
