fix #33 by changing the markdown converter. also, update all the vendors :/

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,3 +116,6 @@ fos_oauth_server:
     service:
         user_provider: fos_user.user_manager
 
+services:
+    fos_user.doctrine_registry:
+        alias: doctrine
